# MagicSquareBruteForcer

./: .gitignore  ArgReader.cpp  ArgReader.h  CMakeLists.txt  MagicSquare.cpp  MagicSquare.sln  MagicSquareBruteForcer.cpp  MagicSquareHeader.h  Makefile  README.md  Square.cpp  Square.h  SquareManager.cpp  SquareTemplate.cpp  SquareTemplate.h  goals.txt  rotation plans.txt  s4m16 example output.txt  s4m16c example output.txt
Dependencies/: cxxopts.hpp
MagicSquare/: MagicSquare.vcxproj  MagicSquare.vcxproj.filters
MagicSquare/src/: Args.cpp  Args.h  MagicSquareBruteForcer.cpp  MagicSquareBruteForcer.h  Square.cpp  Square.h  SquareTemplate.cpp  SquareTemplate.h  ThreadManager.cpp  ThreadManager.h
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
src/: Args.cpp  Args.h  MagicSquareBruteForcer.cpp  Ranges.cpp  Ranges.h  Square.cpp  Square.h  SquareTemplate.cpp  SquareTemplate.h  ThreadManager.cpp  ThreadManager.h  Validators.cpp  Validators.h
